modules/png/image.scm: Add to the repository
* modules/png/image.scm: Add to the repository.
* modules/png/Makefile.am: Update.

--- a/modules/png/Makefile.am
+++ b/modules/png/Makefile.am
@@ -26,7 +26,8 @@ SOURCES = \
 	fsm-signature-context.scm \
 	fsm-signature.scm	\
 	fsm-chunk.scm		\
-	fsm.scm
+	fsm.scm			\
+	image.scm
 
 EXTRA_DIST = \
 	fsm-signature.puml	\
