modules/png/core/chunk-ihdr: New module
* modules/png/core/chunk.scm: Move <png-chunk:ihdr> to a separate module.
* modules/png/core/chunk-ihdr.scm: New module.
* modules/png/chunk-converter.scm: Use it.
* modules/png/core/Makefile.am: Update.
* modules/png/core/common.scm (object-address/hex-string): Move here.

--- a/modules/png/core/Makefile.am
+++ b/modules/png/core/Makefile.am
@@ -21,7 +21,8 @@ include $(top_srcdir)/build-aux/am/guilec
 
 SOURCES = \
 	common.scm	\
-	chunk.scm
+	chunk.scm	\
+	chunk-ihdr.scm
 
 GOBJECTS = $(SOURCES:%.scm=%.go)
 
