modules/png/core/chunk-plte: New module
* modules/png/core/chunk-plte.scm: Add to the repository.
* modules/png/chunk-converter.scm (png-chunk->png-chunk:PLTE): New procedure.
* modules/png/core/Makefile.am: Update.

--- a/modules/png/core/Makefile.am
+++ b/modules/png/core/Makefile.am
@@ -22,7 +22,8 @@ include $(top_srcdir)/build-aux/am/guilec
 SOURCES = \
 	common.scm	\
 	chunk.scm	\
-	chunk-ihdr.scm
+	chunk-ihdr.scm	\
+	chunk-plte.scm
 
 GOBJECTS = $(SOURCES:%.scm=%.go)
 
