modules/png/core/chunk-chrm: New module
* modules/png/core/chunk-chrm.scm: New module.
* modules/png/chunk-converter.scm: Add a converter for cHRM.
* modules/png/core/Makefile.am: Update.

--- a/modules/png/core/Makefile.am
+++ b/modules/png/core/Makefile.am
@@ -24,7 +24,8 @@ SOURCES = \
 	chunk.scm	\
 	chunk-ihdr.scm	\
 	chunk-plte.scm	\
-	chunk-iend.scm
+	chunk-iend.scm	\
+	chunk-chrm.scm
 
 GOBJECTS = $(SOURCES:%.scm=%.go)
 
