modules/png/core/chunk-ztxt: New module
* modules/png/core/chunk-ztxt.scm: New module.
* modules/png/chunk-converter.scm: Add a converter for zTXt chunks.
* modules/png/core/Makefile.am: Update.

--- a/modules/png/core/Makefile.am
+++ b/modules/png/core/Makefile.am
@@ -25,7 +25,8 @@ SOURCES = \
 	chunk-ihdr.scm	\
 	chunk-plte.scm	\
 	chunk-iend.scm	\
-	chunk-chrm.scm
+	chunk-chrm.scm	\
+	chunk-ztxt.scm
 
 GOBJECTS = $(SOURCES:%.scm=%.go)
 
