modules/png/core/chunk-time: New module
* modules/png/core/chunk-time.scm: New module.
* modules/png/core/common.scm (vector->int16): New procedure.
* modules/png/chunk-converter.scm: Add a converter for tIME chunks.
* modules/png/core/Makefile.am: Update.

--- a/modules/png/core/Makefile.am
+++ b/modules/png/core/Makefile.am
@@ -26,7 +26,8 @@ SOURCES = \
 	chunk-plte.scm	\
 	chunk-iend.scm	\
 	chunk-chrm.scm	\
-	chunk-ztxt.scm
+	chunk-ztxt.scm	\
+	chunk-time.scm
 
 GOBJECTS = $(SOURCES:%.scm=%.go)
 
