--- a/modules/png/Makefile.am
+++ b/modules/png/Makefile.am
@@ -1,6 +1,6 @@
 ## Makefile.am -- Config file for GNU Automake.
 ##
-## Copyright (C) 2021 Artyom V. Poptsov <poptsov.artyom@gmail.com>
+## Copyright (C) 2021-2022 Artyom V. Poptsov <poptsov.artyom@gmail.com>
 ##
 ## This file is part of Guile-INI.
 ##
@@ -20,7 +20,8 @@
 include $(top_srcdir)/build-aux/am/guilec
 
 SUBDIRS = \
-	core
+	core	\
+	fsm
 
 SOURCES = \
 	fsm-signature-context.scm \
