--- a/modules/png/fsm/Makefile.am
+++ b/modules/png/fsm/Makefile.am
@@ -94,7 +94,7 @@ signature-parser.scm: context.go signature-context.go signature-parser.puml
 	@echo "  SMC      $@"
 	@$(GUILE_SMC_ENV) smc compile $(GUILE_SMC_SIGNATURE_PARSER_ARGS) signature-parser.puml > $@
 
-png-context.scm: signature-parser.go
+png-context.scm: signature-parser.go chunk-parser.go
 
 chunk-parser.scm: context.go signature-parser.scm chunk-context.go chunk-parser.puml
 	@echo "  SMC      $@"
