modules/png/fsm/Makefile.am: Fix deps
* modules/png/fsm/Makefile.am (all): Depend on "png-parser.scm".

--- a/modules/png/fsm/Makefile.am
+++ b/modules/png/fsm/Makefile.am
@@ -84,7 +84,7 @@ endif
 
 GUILE_SMC_ENV = GUILE_AUTO_COMPILE=0
 
-all: context.scm
+all: context.scm png-parser.scm
 
 context.scm:
 	@echo "  SMC      $@"
