png/core/common (int32->bytevector): Bugfix
* modules/png/core/common.scm (int32->bytevector): Bugfix.
* tests/common.scm: New test suite.
* tests/Makefile.am: Update.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -18,6 +18,7 @@
 ## along with Guile-PNG.  If not, see <http://www.gnu.org/licenses/>.
 
 SCM_TESTS = \
+	common.scm	\
 	chunks.scm \
 	fsm-context.scm	\
 	image.scm
