modules/png/core/filter.scm: New module
* modules/png/core/filter.scm: New module.
* modules/png/core/Makefile.am: Update.
* modules/png/image.scm: Use "png-filter-none-remove!" method from the new
  module.

--- a/modules/png/core/Makefile.am
+++ b/modules/png/core/Makefile.am
@@ -21,6 +21,7 @@ include $(top_srcdir)/build-aux/am/guilec
 
 SOURCES = \
 	crc.scm		\
+	filter.scm	\
 	common.scm	\
 	chunk.scm	\
 	chunk-ihdr.scm	\
