doc: Add the documentation
* doc/guile-png.texi,
  doc/fdl.texi,
  doc/Makefile.am,
  doc/.gitignore: Add to the repository.
* Makefile.am, configure.ac: Update.

--- a/configure.ac
+++ b/configure.ac
@@ -83,6 +83,7 @@ AC_CONFIG_FILES([
         modules/png/core/Makefile
         modules/png/fsm/Makefile
         tests/Makefile
+        doc/Makefile
 ])
 
 dnl texinfo package required to make the documentation in Texinfo format.
