--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,6 +1,6 @@
 ## Makefile.am -- Config file for GNU Automake.
 ##
-## Copyright (C) 2021 Artyom V. Poptsov <poptsov.artyom@gmail.com>
+## Copyright (C) 2017 Artyom V. Poptsov <poptsov.artyom@gmail.com>
 ##
 ## This file is part of Guile-PNG.
 ##
@@ -17,29 +17,22 @@
 ## You should have received a copy of the GNU General Public License
 ## along with Guile-PNG.  If not, see <http://www.gnu.org/licenses/>.
 
-ACLOCAL_AMFLAGS = -I build-aux
+info_TEXINFOS = guile-png.texi
 
-SUBDIRS = build-aux modules tests doc
+guile_png_TEXINFOS = \
+	guile-png.texi	\
+	fdl.texi
 
-EXTRA_DIST = \
-	.dir-locals.el
+## Silent rules.
+AM_V_HELP2MAN = $(AM_V_HELP2MAN_$(V))
+AM_V_HELP2MAN_ = $(AM_V_HELP2MAN_$(AM_DEFAULT_VERBOSITY))
+AM_V_HELP2MAN_0 = @echo "  HELP2MAN" $@;
+##
 
-gen-ChangeLog:
-	if test -d .git; then				\
-	  $(top_srcdir)/build-aux/gitlog-to-changelog	\
-	    2bea8c70..HEAD > $(distdir)/cl-t;		\
-	  rm -f $(distdir)/ChangeLog;			\
-	  mv $(distdir)/cl-t $(distdir)/ChangeLog;	\
-	fi
+gen_man =							\
+	LANGUAGE= $(top_builddir)/pre-inst-env $(HELP2MAN)	\
+	$(HELP2MANFLAGS)
 
-dist-hook: gen-ChangeLog
-.PHONY: gen-ChangeLog
+HELP2MANFLAGS = --source=GNU --info-page=$(PACKAGE_TARNAME)
 
-clean-go:
-	-$(RM) $(GOBJECTS)
-.PHONY: clean-go
-
-CLEANFILES = \
-	$(GOBJECTS)
-
-# Makefile.am ends here
+## Makefile.am ends here
