modules/png/Makefile.am: Update

--- a/modules/png/Makefile.am
+++ b/modules/png/Makefile.am
@@ -26,7 +26,8 @@ SUBDIRS = \
 SOURCES = \
 	chunk-converter.scm	\
 	pixel.scm		\
-	image.scm
+	image.scm		\
+	image-processing.scm
 
 GOBJECTS = $(SOURCES:%.scm=%.go)
 
