--- a/.github/workflows/guile2.2.yml
+++ b/.github/workflows/guile2.2.yml
@@ -18,6 +18,15 @@ jobs:
           sudo apt install guile-2.2-dev texinfo gettext
           sudo apt install automake autoconf help2man
         
+      - name: Install Guile-ZLIB
+        run: |
+          wget -O guile-zlib.tar.gz https://archive.softwareheritage.org/api/1/vault/flat/swh:1:dir:c8686f5aaddec4650ceefa62b31df6e9eb40e085/raw/
+          tar -zxf guile-zlib.tar.gz
+          cd 'swh:1:dir:c8686f5aaddec4650ceefa62b31df6e9eb40e085'
+          autoreconf -vif
+          ./configure --with-guilesitedir=/usr/share/guile/site/2.2 --prefix=/usr
+          sudo make -j$(nproc) install
+
       - name: Install Guile-SMC
         run: |
           git clone https://github.com/artyom-poptsov/guile-smc
