--- a/.github/workflows/guile3.0.yml
+++ b/.github/workflows/guile3.0.yml
@@ -14,6 +14,15 @@ jobs:
         run: |
           sudo apt --force-yes -qy install guile-3.0 guile-3.0-libs guile-3.0-dev guile-library texinfo gettext make automake autoconf help2man
 
+      - name: Install Guile-ZLIB
+        run: |
+          wget -O guile-zlib.tar.gz https://archive.softwareheritage.org/api/1/vault/flat/swh:1:dir:c8686f5aaddec4650ceefa62b31df6e9eb40e085/raw/
+          tar -zxf guile-zlib.tar.gz
+          cd 'swh:1:dir:c8686f5aaddec4650ceefa62b31df6e9eb40e085'
+          autoreconf -vif
+          ./configure --with-guilesitedir=/usr/share/guile/site/2.2 --prefix=/usr
+          sudo make -j$(nproc) install
+
       - name: Install Guile-SMC
         run: |
           git clone https://github.com/artyom-poptsov/guile-smc
