modules/png/fsm/Makefile.am: Bugfix

--- a/modules/png/fsm/Makefile.am
+++ b/modules/png/fsm/Makefile.am
@@ -30,8 +30,11 @@ BUILT_SOURCES =	\
 EXTRA_DIST += \
 	context.scm	\
 	chunk-parser.puml \
+	chunk-parser.scm \
+	png-parser.puml \
 	png-parser.scm	\
-	signature-parser.puml
+	signature-parser.puml \
+	signature-parser.scm
 
 INSTALL += \
 	context.scm
@@ -94,8 +97,6 @@ signature-parser.scm: context.go signature-context.go signature-parser.puml
 	@echo "  SMC      $@"
 	@$(GUILE_SMC_ENV) smc compile $(GUILE_SMC_SIGNATURE_PARSER_ARGS) signature-parser.puml > $@
 
-png-context.scm: signature-parser.go chunk-parser.go
-
 chunk-parser.scm: context.go signature-parser.scm chunk-context.go chunk-parser.puml
 	@echo "  SMC      $@"
 	@$(GUILE_SMC_ENV) smc compile $(GUILE_SMC_CHUNK_PARSER_ARGS) chunk-parser.puml > $@
@@ -104,6 +105,7 @@ png-parser.scm: context.go chunk-parser.go png-context.go png-parser.puml
 	@echo "  SMC      $@"
 	@$(GUILE_SMC_ENV) smc compile $(GUILE_SMC_PNG_PARSER_ARGS) png-parser.puml > $@
 
+png-context.scm: signature-parser.scm chunk-parser.scm
 
 CLEANFILES += \
 	context.log	\
