--- a/modules/Makefile.am
+++ b/modules/Makefile.am
@@ -26,37 +26,7 @@ SUBDIRS = \
 SOURCES = \
 	png.scm
 
-GOBJECTS = $(SOURCES:%.scm=%.go)
-
-moddir=$(guilesitedir)/
-nobase_dist_mod_DATA = $(SOURCES)
-
-ccachedir=$(libdir)/guile/$(GUILE_EFFECTIVE_VERSION)/site-ccache
-nobase_nodist_ccache_DATA = $(GOBJECTS)
-
-# Make sure source files are installed first, so that the mtime of
-# installed compiled files is greater than that of installed source
-# files.  See
-# <http://lists.gnu.org/archive/html/guile-devel/2010-07/msg00125.html>
-# for details.
-guile_smc_install_go_files = install-nobase_dist_ccacheDATA
-$(guile_smc_install_go_files): install-nobase_dist_modDATA
-
-GUILE_WARNINGS = -Wunbound-variable -Warity-mismatch -Wformat
-SUFFIXES = .scm .go
-
-guilec_opts = --load-path=$(abs_top_srcdir)/modules/
-.scm.go:
-	$(AM_V_GUILEC)$(guilec_env) $(GUILEC) $(guilec_opts) \
-	--output=$@ $<
-
-clean-go:
-	-$(RM) $(GOBJECTS)
-
-.PHONY: clean-go
-
-
-CLEANFILES = \
-	$(GOBJECTS)
+moddir=$(prefix)/share/guile/site/$(GUILE_EFFECTIVE_VERSION)/
+godir=$(libdir)/guile/$(GUILE_EFFECTIVE_VERSION)/site-ccache/
 
 ### Makefile.am ends here.
