modules/png/graphics.scm: New module
* modules/png/graphics.scm: New module.
* modules/png/Makefile.am (SOURCES): Add "graphics.scm".

--- a/modules/png/Makefile.am
+++ b/modules/png/Makefile.am
@@ -27,9 +27,8 @@ SOURCES = \
 	chunk-converter.scm	\
 	pixel.scm		\
 	image.scm		\
-	image-processing.scm
-
-GOBJECTS = $(SOURCES:%.scm=%.go)
+	image-processing.scm	\
+	graphics.scm
 
 moddir=$(guilesitedir)/png/
 nobase_dist_mod_DATA = \
