modules/png/graphics: Add
* configure.ac: Update.
* modules/png/Makefile.am: Update.
* modules/png/graphics/graphic.scm, modules/png/graphics/line.scm,
  modules/png/graphics/point.scm, modules/png/graphics/rectangle.scm,
  modules/png/graphics/Makefile.am: Add to the repository.

--- a/configure.ac
+++ b/configure.ac
@@ -82,6 +82,7 @@ AC_CONFIG_FILES([
         modules/png/Makefile
         modules/png/core/Makefile
         modules/png/fsm/Makefile
+        modules/png/graphics/Makefile
         tests/Makefile
         doc/Makefile
 ])
