--- a/modules/png/graphics/Makefile.am
+++ b/modules/png/graphics/Makefile.am
@@ -1,42 +1,37 @@
 ## Makefile.am -- Config file for GNU Automake.
 ##
-## Copyright (C) 2021-2022 Artyom V. Poptsov <poptsov.artyom@gmail.com>
+## Copyright (C) 2022 Artyom V. Poptsov <poptsov.artyom@gmail.com>
 ##
 ## This file is part of Guile-INI.
 ##
-## Guile-INI is free software: you can redistribute it and/or
+## Guile-PNG is free software: you can redistribute it and/or
 ## modify it under the terms of the GNU General Public License as
 ## published by the Free Software Foundation, either version 3 of the
 ## License, or (at your option) any later version.
 ##
-## Guile-INI is distributed in the hope that it will be useful, but
+## Guile-PNG is distributed in the hope that it will be useful, but
 ## WITHOUT ANY WARRANTY; without even the implied warranty of
 ## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 ## General Public License for more details.
 ##
 ## You should have received a copy of the GNU General Public License
-## along with Guile-INI.  If not, see <http://www.gnu.org/licenses/>.
+## along with Guile-PNG.  If not, see <http://www.gnu.org/licenses/>.
 
 include $(top_srcdir)/build-aux/am/guilec
 
-SUBDIRS = \
-	core	\
-	fsm	\
-	graphics
-
 SOURCES = \
-	chunk-converter.scm	\
-	pixel.scm		\
-	image.scm		\
-	image-processing.scm	\
-	tools.scm
+	graphic.scm	\
+	point.scm	\
+	line.scm	\
+	rectangle.scm
 
-moddir=$(guilesitedir)/png/
+GOBJECTS = $(SOURCES:%.scm=%.go)
+
+moddir=$(guilesitedir)/png/core/
 nobase_dist_mod_DATA = \
-	$(SOURCES) \
-	$(EXTRA_DIST)
+	$(SOURCES)
 
-ccachedir=$(libdir)/guile/$(GUILE_EFFECTIVE_VERSION)/site-ccache/png/
+ccachedir=$(libdir)/guile/$(GUILE_EFFECTIVE_VERSION)/site-ccache/png/graphics/
 nobase_nodist_ccache_DATA = $(GOBJECTS)
 
 # Make sure source files are installed first, so that the mtime of
@@ -59,7 +54,6 @@ clean-go:
 	-$(RM) $(GOBJECTS)
 
 .PHONY: clean-go
-
 
 CLEANFILES = \
 	$(GOBJECTS)
