modules/png/graphics.scm: New module
* modules/png/graphics.scm: New module.
* modules/png/tools.scm: Remove.
* modules/png/Makefile.am: Update.

--- a/modules/png/Makefile.am
+++ b/modules/png/Makefile.am
@@ -29,7 +29,7 @@ SOURCES = \
 	pixel.scm		\
 	image.scm		\
 	image-processing.scm	\
-	tools.scm
+	graphics.scm
 
 moddir=$(guilesitedir)/png/
 nobase_dist_mod_DATA = \
