modules/png/graphics/ellipse: New module
* modules/png/graphics/ellipse.scm: New module.
* modules/png/graphics/Makefile.am: Update.
* modules/png/graphics.scm: Export (png graphics ellipse).

--- a/modules/png/graphics/Makefile.am
+++ b/modules/png/graphics/Makefile.am
@@ -23,7 +23,8 @@ SOURCES = \
 	graphic.scm	\
 	point.scm	\
 	line.scm	\
-	rectangle.scm
+	rectangle.scm	\
+	ellipse.scm
 
 GOBJECTS = $(SOURCES:%.scm=%.go)
 
