modules/png/graphics/circle.scm: New module
* modules/png/graphics/circle.scm: New module.
* modules/png/graphics/Makefile.am: Update.
* modules/png/graphics.scm: Update.

--- a/modules/png/graphics/Makefile.am
+++ b/modules/png/graphics/Makefile.am
@@ -24,7 +24,8 @@ SOURCES = \
 	point.scm	\
 	line.scm	\
 	rectangle.scm	\
-	ellipse.scm
+	ellipse.scm	\
+	circle.scm
 
 GOBJECTS = $(SOURCES:%.scm=%.go)
 
