modules/png/core/chunk-text: New module
* modules/png/core/chunk-text.scm: New module.
* modules/png/core/Makefile.am: Update.

--- a/modules/png/core/Makefile.am
+++ b/modules/png/core/Makefile.am
@@ -28,6 +28,7 @@ SOURCES = \
 	chunk-plte.scm	\
 	chunk-iend.scm	\
 	chunk-chrm.scm	\
+	chunk-text.scm	\
 	chunk-ztxt.scm	\
 	chunk-time.scm	\
 	chunk-iccp.scm	\
