modules/png/core: Move chunk modules to "core/chunk"
* configure.ac: Update.
* modules/png/chunk-converter.scm: Update.
* modules/png/image.scm: Update.
* modules/png/core/Makefile.am (SUBDIRS): Add "chunk".
* modules/png/core/chunk-bkgd.scm: Rename to 'modules/png/core/chunk/bkgd.scm'.
* modules/png/core/chunk-chrm.scm: Rename to 'modules/png/core/chunk/chrm.scm'.
* modules/png/core/chunk-iccp.scm: Rename to 'modules/png/core/chunk/iccp.scm'.
* modules/png/core/chunk-iend.scm: Rename to 'modules/png/core/chunk/iend.scm'.
* modules/png/core/chunk-ihdr.scm: Rename to 'modules/png/core/chunk/ihdr.scm'.
* modules/png/core/chunk-phys.scm: Rename to 'modules/png/core/chunk/phys.scm'.
* modules/png/core/chunk-plte.scm: Rename to 'modules/png/core/chunk/plte.scm'.
* modules/png/core/chunk-text.scm: Rename to 'modules/png/core/chunk/text.scm'.
* modules/png/core/chunk-time.scm: Rename to 'modules/png/core/chunk/time.scm'.
* modules/png/core/chunk-ztxt.scm: Rename to 'modules/png/core/chunk/ztxt.scm'.
* modules/png/core/chunk/Makefile.am: Add.
* tests/chunks.scm, tests/image.scm: Update.

--- a/configure.ac
+++ b/configure.ac
@@ -80,6 +80,7 @@ AC_CONFIG_FILES([
         modules/Makefile
         modules/png/Makefile
         modules/png/core/Makefile
+        modules/png/core/chunk/Makefile
         modules/png/fsm/Makefile
         modules/png/graphics/Makefile
         tests/Makefile
