png/core/chunk/iend: Rename
* modules/png/core/chunk/iend.scm: Rename to
  'modules/png/core/chunk/IEND.scm'.
* modules/png/chunk-converter.scm: Update.
* modules/png/core/chunk/Makefile.am: Update.
* modules/png/image.scm: Update.
* tests/image.scm: Update.

--- a/modules/png/core/chunk/Makefile.am
+++ b/modules/png/core/chunk/Makefile.am
@@ -22,7 +22,7 @@ include $(top_srcdir)/build-aux/am/guilec
 SOURCES = \
 	IHDR.scm	\
 	plte.scm	\
-	iend.scm	\
+	IEND.scm	\
 	cHRM.scm	\
 	text.scm	\
 	ztxt.scm	\
