png/core/chunk/plte: Rename
* modules/png/core/chunk/plte.scm: Rename to
  'modules/png/core/chunk/PLTE.scm'.
* modules/png/core/chunk/Makefile.am: Update.
* modules/png/chunk-converter.scm: Update.
* tests/chunks.scm: Update.

--- a/modules/png/core/chunk/Makefile.am
+++ b/modules/png/core/chunk/Makefile.am
@@ -21,7 +21,7 @@ include $(top_srcdir)/build-aux/am/guilec
 
 SOURCES = \
 	IHDR.scm	\
-	plte.scm	\
+	PLTE.scm	\
 	IEND.scm	\
 	cHRM.scm	\
 	text.scm	\
