png/core/chunk: Bugfix: Make module names case-insensitive
Guile-PNG would always fail on platforms where file names are case-insensitive
because there is "tEXT.scm" module along with "tEXt.scm" in the same
directory.  This patch renames modules in such a way that the typed chunk
module names are differ in all the cases.  Also all chunk modules now have
lower-case names.

Reported by Aleix Conchillo Flaqué in here:
https://github.com/artyom-poptsov/guile-png/issues/2

* NEWS: Update.
* modules/png/chunk-decoder.scm: Update.
* modules/png/image.scm: Update.
* modules/png/core/chunk/IEND.scm: Rename to "iend.scm".
* modules/png/core/chunk/IHDR.scm: Rename to "ihdr.scm".
* modules/png/core/chunk/PLTE.scm: Rename to "plte.scm".
* modules/png/core/chunk/bKGD.scm: Rename to "bkgd.scm".
* modules/png/core/chunk/cHRM.scm: Rename to "chrm.scm".
* modules/png/core/chunk/iCCP.scm: Rename to "iccp.scm".
* modules/png/core/chunk/pHYs.scm: Rename to "phys.scm".
* modules/png/core/chunk/tEXt.scm: Rename to "text.scm".
* modules/png/core/chunk/tEXT.scm: Move the code to
  "modules/png/core/chunk/text.scm".
* modules/png/core/chunk/tIME.scm: Rename to "time.scm".
* modules/png/core/chunk/zTXt.scm: Rename to "ztxt.scm".
* modules/png/core/chunk/Makefile.am: Update.
* tests/chunks.scm, tests/image.scm: Update.

--- a/modules/png/core/chunk/Makefile.am
+++ b/modules/png/core/chunk/Makefile.am
@@ -1,6 +1,6 @@
 ## Makefile.am -- Config file for GNU Automake.
 ##
-## Copyright (C) 2022 Artyom V. Poptsov <poptsov.artyom@gmail.com>
+## Copyright (C) 2022-2023 Artyom V. Poptsov <poptsov.artyom@gmail.com>
 ##
 ## This file is part of Guile-PNG.
 ##
@@ -20,17 +20,16 @@
 include $(top_srcdir)/build-aux/am/guilec
 
 SOURCES = \
-	IHDR.scm	\
-	PLTE.scm	\
-	IEND.scm	\
-	cHRM.scm	\
-	tEXt.scm	\
-	tEXT.scm	\
-	zTXt.scm	\
-	tIME.scm	\
-	iCCP.scm	\
-	bKGD.scm	\
-	pHYs.scm
+	ihdr.scm	\
+	plte.scm	\
+	iend.scm	\
+	chrm.scm	\
+	text.scm	\
+	ztxt.scm	\
+	time.scm	\
+	iccp.scm	\
+	bkgd.scm	\
+	phys.scm
 
 GOBJECTS = $(SOURCES:%.scm=%.go)
 
