modules/png: Split image processing procedures into modules
* configure.ac: Update.
* modules/png/Makefile.am: Update.
* modules/png/image-processing/Makefile.am: New file.
* modules/png/image-processing/grayscale.scm,
  modules/png/image-processing/invert-colors.scm,
  modules/png/image-processing/solarize.scm: New modules.
* modules/png/image-processing.scm: Re-export image processing modules.

--- a/configure.ac
+++ b/configure.ac
@@ -83,6 +83,7 @@ AC_CONFIG_FILES([
         modules/png/core/chunk/Makefile
         modules/png/fsm/Makefile
         modules/png/graphics/Makefile
+        modules/png/image-processing/Makefile
         tests/Makefile
         doc/Makefile
 ])
