tests/image-processing: New test suite
* tests/image-processing.scm: New test suite.
* tests/Makefile.am: Update.
* tests/meditate.png: New file.
* tests/README.org: New file.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -22,7 +22,8 @@ SCM_TESTS = \
 	common.scm	\
 	chunks.scm \
 	image.scm	\
-	graphics.scm
+	graphics.scm	\
+	image-processing.scm
 
 TESTS = ${SCM_TESTS}
 
