tests/Makefile.am (EXTRA_DIST): Add "meditate.png"
* tests/Makefile.am (EXTRA_DIST): Add "meditate.png".

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -48,7 +48,8 @@ AM_SCM_LOG_FLAGS = \
 
 EXTRA_DIST = \
 	${SCM_TESTS}	\
-	example-rainbow.png
+	example-rainbow.png \
+	meditate.png
 
 CLEANFILES = \
 	*.log
