doc/guile-png.texi (Installation): Move to a separate file
* doc/guile-png.texi (Installation): Move to a separate file.
* doc/guile-png-installation.texi: New file.
* doc/Makefile.am: Update.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -20,6 +20,7 @@
 info_TEXINFOS = guile-png.texi
 
 guile_png_TEXINFOS = \
+	guile-png-installation.texi \
 	guile-png.texi	\
 	fdl.texi	\
 	indices.texi
