examples: Substitute the path to Guile binary
* examples/image-processing-invert-colors.scm: Rename to
  "examples/image-processing-invert-colors.scm.in". Substitute the path to Guile
  binary.
* examples/image-processing-solarize.scm: Rename to
  "examples/image-processing-solarize.scm.in". Likewise.
* examples/print-chunks.scm: Rename to "examples/print-chunks.scm.in".
  Likewise.
* Makefile.am, configure.ac: Update.
* examples/Makefile.am: Add.

--- a/configure.ac
+++ b/configure.ac
@@ -84,6 +84,7 @@ AC_CONFIG_FILES([
         modules/png/fsm/Makefile
         modules/png/graphics/Makefile
         modules/png/image-processing/Makefile
+        examples/Makefile
         tests/Makefile
         doc/Makefile
 ])
