examples/sierpinski-triangle.scm.in: Add to the repository
* examples/sierpinski-triangle.scm.in: Add to the repository.
* examples/Makefile.am (bin_SCRIPTS): Add "sierpinski-triangle.scm".
  (SOURCES): Add "sierpinski-triangle.scm.in".
* examples/.gitignore: Ignore "sierpinski-triangle.scm".

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -19,7 +19,8 @@
 bin_SCRIPTS = \
 	image-processing-invert-colors.scm \
 	image-processing-solarize.scm \
-	print-chunks.scm
+	print-chunks.scm \
+	sierpinski-triangle.scm
 
 sssh_scm_SOURCES = sssh.scm.in
 ssshd_scm_SOURCES = ssshd.scm.in
@@ -27,7 +28,8 @@ ssshd_scm_SOURCES = ssshd.scm.in
 SOURCES = \
 	image-processing-invert-colors.scm.in \
 	image-processing-solarize.scm.in \
-	print-chunks.scm.in
+	print-chunks.scm.in \
+	sierpinski-triangle.scm.in
 
 EXTRA_DIST = $(SOURCES)
 
