--- a/modules/png/graphics/Makefile.am
+++ b/modules/png/graphics/Makefile.am
@@ -1,6 +1,6 @@
 ## Makefile.am -- Config file for GNU Automake.
 ##
-## Copyright (C) 2022 Artyom V. Poptsov <poptsov.artyom@gmail.com>
+## Copyright (C) 2022-2023 Artyom V. Poptsov <poptsov.artyom@gmail.com>
 ##
 ## This file is part of Guile-PNG.
 ##
@@ -20,6 +20,7 @@
 include $(top_srcdir)/build-aux/am/guilec
 
 SOURCES = \
+	dimension.scm	\
 	pixel.scm	\
 	graphic.scm	\
 	point.scm	\
