png/graphics/selection: New module
* modules/png/graphics/selection.scm: New module.
* modules/png/graphics/Makefile.am: Update.
* modules/png/graphics.scm: Export "(png graphics selection)".
* tests/graphics.scm: Add a new test.

--- a/modules/png/graphics/Makefile.am
+++ b/modules/png/graphics/Makefile.am
@@ -30,7 +30,8 @@ SOURCES = \
 	rectangle.scm	\
 	filled-rectangle.scm	\
 	ellipse.scm	\
-	circle.scm
+	circle.scm	\
+	selection.scm
 
 GOBJECTS = $(SOURCES:%.scm=%.go)
 
