examples/sierpinski-carpet-animation.scm.in: New example
* examples/sierpinski-carpet-animation.scm.in: New example.
* examples/Makefile.am: Update.
* examples/.gitignore: Ignore "sierpinski-carpet-animation.scm".

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -21,7 +21,8 @@ bin_SCRIPTS = \
 	image-processing-solarize.scm \
 	print-chunks.scm \
 	sierpinski-triangle.scm \
-	sierpinski-carpet.scm
+	sierpinski-carpet.scm \
+	sierpinski-carpet-animation.scm
 
 sssh_scm_SOURCES = sssh.scm.in
 ssshd_scm_SOURCES = ssshd.scm.in
@@ -31,7 +32,8 @@ SOURCES = \
 	image-processing-solarize.scm.in \
 	print-chunks.scm.in \
 	sierpinski-triangle.scm.in \
-	sierpinski-carpet.scm.in
+	sierpinski-carpet.scm.in \
+	sierpinski-carpet-animation.scm.in
 
 EXTRA_DIST = $(SOURCES)
 
