--- a/.github/workflows/guile2.2.yml
+++ b/.github/workflows/guile2.2.yml
@@ -16,8 +16,8 @@ jobs:
           sudo apt update
           sudo apt install guile-2.2 guile-2.2-libs guile-library
           sudo apt install guile-2.2-dev texinfo gettext
-          sudo apt install automake autoconf help2man
-        
+          sudo apt install automake autoconf help2man texlive
+
       - name: Install Guile-ZLIB
         run: |
           wget -O guile-zlib.tar.gz https://archive.softwareheritage.org/api/1/vault/flat/swh:1:dir:c8686f5aaddec4650ceefa62b31df6e9eb40e085/raw/
