.github/workflows/guile2.2: Upload the artifact
* .github/workflows/guile2.2.yml: Add "Upload the artifact" phase.

--- a/.github/workflows/guile2.2.yml
+++ b/.github/workflows/guile2.2.yml
@@ -53,3 +53,10 @@ jobs:
 
       - name: Distcheck
         run: make -j$(nproc) distcheck
+
+      - name: Upload the artifact
+        id: upload-artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: guile-png
+          path: "guile-png-0.7.1.tar.gz"
