--- a/.github/workflows/guile3.0.yml
+++ b/.github/workflows/guile3.0.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Install dependencies
         run: |
-          sudo apt --force-yes -qy install guile-3.0 guile-3.0-libs guile-3.0-dev guile-library texinfo gettext make automake autoconf help2man
+          sudo apt --force-yes -qy install guile-3.0 guile-3.0-libs guile-3.0-dev guile-library texinfo gettext make automake autoconf help2man texlive
 
       - name: Install Guile-ZLIB
         run: |
@@ -46,3 +46,13 @@ jobs:
 
       - name: Test
         run: make -j$(nproc) check
+
+      - name: Distcheck
+        run: make -j$(nproc) distcheck
+
+      - name: Upload the artifact
+        id: upload-artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: guile-png
+          path: "guile-png-[0-9]+.[0-9]+.[0-9]+.tar.gz"
