--- a/.github/workflows/guile2.2.yml
+++ b/.github/workflows/guile2.2.yml
@@ -59,4 +59,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: guile-png
-          path: "guile-png-0.7.1.tar.gz"
+          path: "guile-png-[0-9]+.[0-9]+.[0-9]+.tar.gz"
