--- a/.github/workflows/guile3.0.yml
+++ b/.github/workflows/guile3.0.yml
@@ -55,4 +55,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: guile-png
-          path: "guile-png-[0-9]+.[0-9]+.[0-9]+.tar.gz"
+          path: "guile-png-*.tar.gz"
