--- a/.github/workflows/guile3.0.yml
+++ b/.github/workflows/guile3.0.yml
@@ -55,4 +55,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: guile-png
+          compression-level: 0
           path: "guile-png-*.tar.gz"
