--- a/.github/workflows/guile2.2.yml
+++ b/.github/workflows/guile2.2.yml
@@ -59,4 +59,5 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: guile-png
-          path: "guile-png-[0-9]+.[0-9]+.[0-9]+.tar.gz"
+          compression-level: 0
+          path: "guile-png-*.tar.gz"
