--- a/.github/workflows/guile3.0.yml
+++ b/.github/workflows/guile3.0.yml
@@ -12,7 +12,19 @@ jobs:
     steps:
       - name: Install dependencies
         run: |
-          sudo apt --force-yes -qy install guile-3.0 guile-3.0-libs guile-3.0-dev guile-library texinfo gettext make automake autoconf help2man texlive
+          sudo apt update
+          sudo apt --force-yes -qy install \
+            guile-3.0 \
+            guile-b3.0-libs \
+            guile-3.0-dev \
+            guile-library \
+            texinfo \
+            gettext \
+            make \
+            automake \
+            autoconf \
+            help2man \
+            texlive
 
       - name: Install Guile-ZLIB
         run: |
