--- a/.github/workflows/guile3.0.yml
+++ b/.github/workflows/guile3.0.yml
@@ -15,7 +15,7 @@ jobs:
           sudo apt update
           sudo apt --force-yes -qy install \
             guile-3.0 \
-            guile-b3.0-libs \
+            guile-3.0-libs \
             guile-3.0-dev \
             guile-library \
             texinfo \
