--- a/modules/png/image-processing/Makefile.am
+++ b/modules/png/image-processing/Makefile.am
@@ -22,6 +22,7 @@ include $(top_srcdir)/build-aux/am/guilec
 SOURCES = \
 	grayscale.scm	\
 	invert-colors.scm	\
+	rotate.scm	\
 	solarize.scm	\
 	blur.scm
 
