png/image-processing/rotate: Rename to "transform"
* modules/png/image-processing/rotate.scm: Rename to "transform.scm".
* modules/png/image-processing/Makefile.am (SOURCES): Update.
* modules/png/image-processing.scm: Update.

--- a/modules/png/image-processing/Makefile.am
+++ b/modules/png/image-processing/Makefile.am
@@ -22,7 +22,7 @@ include $(top_srcdir)/build-aux/am/guilec
 SOURCES = \
 	grayscale.scm	\
 	invert-colors.scm	\
-	rotate.scm	\
+	transform.scm	\
 	solarize.scm	\
 	blur.scm
 
