utils/png: Implement a CLI tool for working with PNG files
* utils/png.in: Implement a command-line tool to describe the contents of a
PNG file in a human-readable form.
* utils/Makefile.am, utils/.gitignore: Add to the repository.
* modules/png/cli/common.scm, modules/png/cli/command-describe.scm: New modules.
* modules/png/version.scm.in: New file.
* modules/png/.gitignore: Ignore "version.scm".
* modules/png/Makefile.am (SUBDIRS): Register "cli".
(SOURCES): Register "version.scm".
(version.scm): New target.
* configure.ac (AC_CONFIG_FILES): Register new Makefiles.
* Makefile.am (SUBDIRS): Register "utils".

--- a/configure.ac
+++ b/configure.ac
@@ -84,6 +84,8 @@ AC_CONFIG_FILES([
         modules/png/fsm/Makefile
         modules/png/graphics/Makefile
         modules/png/image-processing/Makefile
+        modules/png/cli/Makefile
+        utils/Makefile
         examples/Makefile
         tests/Makefile
         doc/Makefile
