--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -1,6 +1,6 @@
 ## Makefile.am -- Config file for GNU Automake.
 ##
-## Copyright (C) 2021-2025 Artyom V. Poptsov <poptsov.artyom@gmail.com>
+## Copyright (C) 2025 Artyom V. Poptsov <poptsov.artyom@gmail.com>
 ##
 ## This file is part of Guile-PNG.
 ##
@@ -17,29 +17,23 @@
 ## You should have received a copy of the GNU General Public License
 ## along with Guile-PNG.  If not, see <http://www.gnu.org/licenses/>.
 
-ACLOCAL_AMFLAGS = -I build-aux
-
-SUBDIRS = build-aux modules utils examples tests doc
+bin_SCRIPTS = \
+	png
 
 EXTRA_DIST = \
-	.dir-locals.el
+	png.in
 
-gen-ChangeLog:
-	if test -d .git; then				\
-	  $(top_srcdir)/build-aux/gitlog-to-changelog	\
-	    2bea8c70..HEAD > $(distdir)/cl-t;		\
-	  rm -f $(distdir)/ChangeLog;			\
-	  mv $(distdir)/cl-t $(distdir)/ChangeLog;	\
-	fi
+SUFFIXES = .in
 
-dist-hook: gen-ChangeLog
-.PHONY: gen-ChangeLog
+substitute = sed -e 's,[@]GUILE[@],$(GUILE),g'
 
-clean-go:
-	-$(RM) $(GOBJECTS)
-.PHONY: clean-go
+.in:
+	@echo "  GEN      $@"
+	@$(substitute) "$^" > "$@.tmp" && 	\
+	chmod +x "$@.tmp" &&			\
+	mv "$@.tmp" "$@"
 
 CLEANFILES = \
-	$(GOBJECTS)
+	png
 
-# Makefile.am ends here
+### Makefile.am ends here.
