png/Makefile.am (EXTRA_DIST): Register "version.scm.in"
* modules/png/Makefile.am (EXTRA_DIST): Register "version.scm.in".

--- a/modules/png/Makefile.am
+++ b/modules/png/Makefile.am
@@ -33,6 +33,9 @@ SOURCES = \
 	image-processing.scm	\
 	graphics.scm
 
+EXTRA_DIST = \
+	version.scm.in
+
 moddir=$(datadir)/guile/site/$(GUILE_EFFECTIVE_VERSION)/png
 nobase_dist_mod_DATA = \
 	$(SOURCES) \
