modules/png/version.scm.in: Bugfix
* modules/png/version.scm.in (%ics-version): Rename to "%png-version".

--- a/modules/png/version.scm.in
+++ b/modules/png/version.scm.in
@@ -42,7 +42,7 @@
             png-version/patch))
 
 
-(define %ics-version "@VERSION@")
+(define %png-version "@VERSION@")
 
 
 (define (png-version/string)
